# test_task1

./: .env.example  .flake8  README.md  fastapi.db  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 1d704bc091e5_add_device_and_battery_models.py
app/: constants.py
app/api/: routers.py
app/api/endpoints/: __init__.py  battery.py  device.py  user.py
app/core/: config.py  user.py
app/crud/: __init__.py  base.py  battery.py  device.py  device_battery.py
app/models/: __init__.py  base.py  battery.py  device.py  device_battery.py
app/schemas/: __init__.py  battery.py  device.py
