[project]
name = "test_task1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "starlette>=0.27.0",
    "pydantic>=2.5.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
    "aiosignal>=1.3.0",
    "async-timeout>=4.0.3",
    "frozenlist>=1.4.0",
    "multidict>=6.0.0",
    "yarl>=1.9.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",
    "psycopg2-binary>=2.9.9",
    "greenlet>=3.0.0",
    "fastapi-users[sqlalchemy]>=12.0.0",
    "fastapi-users-db-sqlalchemy>=6.0.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",
    "pyjwt[crypto]>=2.8.0",
    "cryptography>=41.0.0",
    "httptools>=0.6.0",
    "websockets>=12.0",
    "h11>=0.14.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "charset-normalizer>=3.0.0",
    "idna>=3.0",
    "certifi>=2023.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "email-validator>=2.0.0",
    "click>=8.1.0",
    "anyio>=4.0.0",
    "sniffio>=1.3.0",
    "typing-extensions>=4.8.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-freezegun>=0.4.2",
    "pytest-lazy-fixture>=0.6.3",
    "faker>=19.0.0",
    "freezegun>=1.2.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "mako>=1.2.0",
    "markupsafe>=2.1.0",
    "packaging>=23.0.0",
    "pyyaml>=6.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
]
